# linux_kernel_practice

./: .gitignore  CMakeLists.txt  README.md  clean.sn  configure.sn
01_hello_world/: CMakeLists.txt  compile.sn
02_internel_module_init/: CMakeLists.txt  Makefile  internel_module_init.c
03_passing_parameter/: CMakeLists.txt  Makefile  passing_simple_count.c
04_symbol_table/: CMakeLists.txt  Makefile  linux_symbol_table.c
05_module_stacking/: CMakeLists.txt  Makefile  module1.c  module2.c
06_module_licence/: CMakeLists.txt  Makefile  kernel-chktaint.sh  module_licence.c
07_module_metadata/: CMakeLists.txt  Makefile  module_info.c
08_printk/: CMakeLists.txt  Makefile  simple_printk.c
09_panic_oops/: CMakeLists.txt  Makefile  test_dump_stack.c  test_kernel_panic.c  test_oops.c
10_process_mana/: CMakeLists.txt  Makefile  test_current_task.c  test_process_info.c
doc/: .gitignore  01_hello_world.tex  02_internel_module_init.tex  03_passing_parameters.tex  05_module_stacking.tex  06_module_licence.tex  07_module_info.tex  CMakeLists.txt  master.tex  usually_use_command.tex
hello_world/: hello_world.c
